--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <button id="previous">&lt;</button>
             <ul>
                 <li>
-                    <img src="https://cdn.pixabay.com/photo/2018/10/05/09/45/cobweb-3725540_960_720.jpg" alt="slide 1" />
+                    <img src="assets/cobweb.jpg" alt="slide 1" />
                 </li>
                 <li>
-                    <img src="https://cdn.pixabay.com/photo/2018/10/15/18/32/bee-eaters-3749679_960_720.jpg" alt="slide 2" />
+                    <img src="assets/bee-eaters.jpg" alt="slide 2" />
                 </li>
                 <li>
-                    <img src="https://cdn.pixabay.com/photo/2018/10/05/23/24/chicken-3727097_960_720.jpg" alt="slide 3" />
+                    <img src="assets/chicken.jpg" alt="slide 3" />
                 </li>
                 <li>
-                    <img src="https://cdn.pixabay.com/photo/2018/09/23/20/56/sparrow-3698507_960_720.jpg" alt="slide 4" />
+                    <img src="assets/sparrow.jpg" alt="slide 4" />
                 </li>
             </ul>
             <button id="next">&gt;</button>
